// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar matches pure component snapshot 1`] = `
<navbar>
  <Menu
    fixed="top"
    style={
      Object {
        "boxShadow": "none",
      }
    }
  >
    <Container>
      <MenuItem>
        <Header>
          Teebox.io
        </Header>
      </MenuItem>
      <MenuMenu
        position="right"
      >
        <Connect(ModalTrigger)
          id="SIGN_IN_MODAL"
          text="Login"
          wrapper={[Function]}
        />
        <Connect(ModalTrigger)
          id="REGISTRATION_MODAL"
          text="Sign up"
          wrapper={[Function]}
        />
      </MenuMenu>
    </Container>
  </Menu>
</navbar>
`;

exports[`Navbar matches pure component when currentUser is present snapshot 1`] = `
<navbar>
  <Menu
    fixed="top"
    style={
      Object {
        "boxShadow": "none",
      }
    }
  >
    <Container>
      <MenuItem>
        <Header>
          Teebox.io
        </Header>
      </MenuItem>
      <MenuMenu
        position="right"
      >
        <Dropdown
          additionLabel="Add "
          additionPosition="top"
          closeOnBlur={true}
          deburr={false}
          icon="dropdown"
          item={true}
          minCharacters={1}
          noResultsMessage="No results found."
          openOnFocus={true}
          renderLabel={[Function]}
          searchInput="text"
          selectOnBlur={true}
          selectOnNavigation={true}
          trigger={
            <UserAvatar
              user={
                Immutable.Map {
                  name: "Billy",
                }
              }
            />
          }
          wrapSelection={true}
        >
          <DropdownMenu>
            <DropdownHeader>
              My Account
            </DropdownHeader>
            <DropdownItem>
              <a
                onClick={[Function]}
              >
                Sign out
              </a>
            </DropdownItem>
          </DropdownMenu>
        </Dropdown>
      </MenuMenu>
    </Container>
  </Menu>
</navbar>
`;
